akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/valid/MyWorkflow.java
package com.example;

import akka.javasdk.workflow.Workflow;

public class MyWorkflow extends Workflow<String> {}
